# Remote-Control-Site

Server/: CMakeLists.txt
Server/src/: app.rc  keyboard_simulator.cpp  keyboard_simulator.h  logger.cpp  logger.h  main.cpp  sha1.cpp  sha1.h  tray_win.cpp  tray_win.h  websocket_server.cpp  websocket_server.h
Web/: index.html
